fix links to external paths, fix background attachment on mobile, make header text wider on md display

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -204,6 +204,10 @@ body {
 /* media queries */
 
 @media (max-width: 767px) {
+  #main-header {
+    background-attachment: scroll;
+  }
+
   .margin-bottom-responsive {
     margin-bottom: 3rem;
   }
